--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -20,6 +20,9 @@
             android:title="My Program Outline"
             android:id="@+id/action_programOutline"/>
         <item
+            android:title="My Applications"
+            android:id="@+id/action_applications"/>
+        <item
             android:title="Logout"
             android:id="@+id/action_logout"/>
 
